Add dom example link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ li {
 </li>
 <li id="l2">
     <a href="dom-jquery.html">DOM & jQuery</a>
-    [<a href="dom-jquery.pdf">pdf</a>]
+    [<a href="dom-jquery.pdf">pdf</a>, <a href='http://pa4373.github.io/weather-jarnvis/'>Weather J.A.R.n.V.I.S</a>, <a href='https://codeload.github.com/pa4373/weather-jarnvis/zip/startkit'>startkit</a>]
 </li>
 </ol>
 
