--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@ li {
     <a href="dom-jquery.html">DOM & jQuery</a>
     [<a href="dom-jquery.pdf">pdf</a>, <a href='http://pa4373.github.io/weather-jarnvis/'>Weather J.A.R.n.V.I.S</a>, <a href='https://codeload.github.com/pa4373/weather-jarnvis/zip/startkit'>startkit</a>]
 </li>
+<li id="l3">
+    <a href="https://docs.google.com/presentation/d/1_5NM9foJomuttUmxE4bdDHqWxucYByk2xGvlEbGTHB8/edit">Open Data & Data Visualisation</a>
+    [<a href="/tw-edu-colleges-grant/svg.html">svg example</a>, <a href="/tw-edu-colleges-grant/barchart.html">barchart</a>, <a href="/tw-edu-colleges-grant">103年度教育部大專院校預算視覺化</a>]
+</li>
 </ol>
 
 <hr>
